# python-memory-management

./: README.md  setup.cfg
memorymanager/: __init__.py
memorymanager/pointers/: __init__.py  core.py  decorators.py
