[metadata]
name=memorymanagement
version=1.0.a02
author=Ricardo Werner Rivas
author_email=ricardowernerrivas@gmail.com
description=Adds support for memory management
long_description=file:README.md
long_description_content_type=text/markdown
license=MIT
license_files=LICENSE
url=https://github.com/Ricardo-Werner-Rivas/python-memory-management/tree/main
project_urls=
	Bug Tracker=https://github.com/Ricardo-Werner-Rivas/python-memory-management/issues
	Repository=https://github.com/Ricardo-Werner-Rivas/python-memory-management
classifiers=
    Programming Language :: Python
    Operating System :: Microsoft :: Windows

[options]
packages=find: